# restate-webservice

./: .gitignore  README.md  hello.py  hypercorn-config.toml  output.sql  pyproject.toml
app/: main.py  models.py
data/: users.csv
db-init/: 01-create_table_user.sql
orchestrator_workflows/: main.py  service.py  workflow.py
restate-data/dell-g15/db/: 000056.sst  000057.sst  000058.sst  000059.sst  000060.sst  000061.sst  000062.sst  000063.sst  000064.sst  000065.sst  000066.sst  000067.sst  000068.sst  000069.sst  000070.sst  000071.sst  000072.sst  000073.sst  000074.sst  000075.sst  000076.sst  000077.sst  000078.sst  000079.sst  IDENTITY  LOG  MANIFEST-000005  OPTIONS-000053  OPTIONS-000055
restate-data/dell-g15/local-loglet/: 000009.sst  IDENTITY  LOG  MANIFEST-000005  OPTIONS-000007
restate-data/dell-g15/local-metadata-store/: IDENTITY  LOG  OPTIONS-000007
